dataset1235/2025-2/610742602/users/1997662715/executions/677928262_4233865845.log
== RUN (2025-08-27 22:54:43)
-- CODE: 
celsius = float(input())

fahrenheit = celsius * ( 9/ 5 ) + 32


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
None
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
None
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
None
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
None
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
None
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:55:58)
-- CODE: 
celsius = float(input())

fahrenheit = celsius * ( 9 / 5 ) + 32

print(round()(x, 2 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 5
    print(round()(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 5
    print(round()(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 5
    print(round()(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 5
    print(round()(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 5
    print(round()(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 5
    print(round()(x, 2 )
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:55:18)
-- CODE: 
celsius = float(input())

fahrenheit = celsius * ( 9 / 5 ) + 32

print( x, 2 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print( x, 2 )
           ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print( x, 2 )
           ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print( x, 2 )
           ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print( x, 2 )
           ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print( x, 2 )
           ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print( x, 2 )
           ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:55:57)
-- CODE: 
celsius = float(input())

fahrenheit = celsius * ( 9 / 5 ) + 32

print(round()(x, 2 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 5
    print(round()(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 5
    print(round()(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 5
    print(round()(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 5
    print(round()(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 5
    print(round()(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 5
    print(round()(x, 2 )
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:55:43)
-- CODE: 
celsius = float(input())

fahrenheit = celsius * ( 9 / 5 ) + 32

print(round(x, 2 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 5
    print(round(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 5
    print(round(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 5
    print(round(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 5
    print(round(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 5
    print(round(x, 2 )
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 5
    print(round(x, 2 )
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:56:29)
-- CODE: 
celsius = float(input())

fahrenheit = celsius * ( 9 / 5 ) + 32

print(round( fahrenheit, 2 ))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:56:10)
-- CODE: 
celsius = float(input())

fahrenheit = celsius * ( 9 / 5 ) + 32

print(round(x, 2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 2 ))
                ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 2 ))
                ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 2 ))
                ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 2 ))
                ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 2 ))
                ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 2 ))
                ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:56:26)
-- CODE: 
celsius = float(input())

fahrenheit = celsius * ( 9 / 5 ) + 32

print(round( fahrenheit, 2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:55:22)
-- CODE: 
celsius = float(input())

fahrenheit = celsius * ( 9 / 5 ) + 32

print( x, 2 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print( x, 2 )
           ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print( x, 2 )
           ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print( x, 2 )
           ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print( x, 2 )
           ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print( x, 2 )
           ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print( x, 2 )
           ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:56:07)
-- CODE: 
celsius = float(input())

fahrenheit = celsius * ( 9 / 5 ) + 32

print(round(x, 2 ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 2 ))
                ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 2 ))
                ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 2 ))
                ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 2 ))
                ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 2 ))
                ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 2 ))
                ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
